<resources>
    <string name="app_name">GroundhogHunter</string>

    <string-array name="stageLevels">
        <item>Start</item>
        <item>Stage 1</item>
        <item>Stage 2</item>
        <item>Stage 3</item>
        <item>Stage 4</item>
    </string-array>

    <string name="emptyString">""</string>
    <string name="secondString">Sec.</string>
    <string name="startString">Start</string>
    <string name="pauseString">Pause</string>
    <string name="resumeString">Resume</string>
    <string name="newString">New</string>
    <string name="quitString">Quit</string>
    <string name="okString">OK</string>
    <string name="cancelString">Cancel</string>
    <string name="submitString">Send</string>
    <string name="nameString">Input your name</string>
    <string name="yesString">YES</string>
    <string name="noString">NO</string>
    <string name="highestString">High:</string>
    <string name="scoreString">Score:</string>
    <string name="timerString">Timer:</string>
    <string name="numHitString">Hits:</string>
    <string name="localTop10String">Top 10</string>
    <string name="globalTop10String">Global Top 10</string>

    <string name="localTop10ScoreString">Top 10 scores</string>              <!-- for menu item -->
    <string name="activityTop10ScoreString">Top10ScoreActivity</string>    <!-- for activity name -->
    <string name="localTop10ScoreTitleString">Top 10 Scores</string>
    <string name="globalTop10ScoreTitleString">Global Top 10 Scores</string>

    <string name="exitString">Exit</string>
    <string name="settingString">Settings</string>
    <string name="soundString">Sound</string>
    <string name="onString">On</string>
    <string name="offString">Off</string>
    <string name="numPlayersString">#Players</string>
    <string name="singlePlayerString">Single Player</string>
    <string name="twoPlayerString">Two Players</string>
    <string name="exitAppString">Exit Game</string>

    <string name="bluetoothString">Bluetooth</string>
    <string name="wifiString">Wi-Fi Direct</string>
    <string name="internetString">Internet</string>
    <string name="createString">Create</string>
    <string name="joinString">Join</string>
    <string name="refreshString">Fresh</string>
    <string name="startGameString">Start Game</string>

    <string name="gameStatusString">Status:</string>
    <string name="loadingString">Loading …</string>
    <string name="showingAdsString">Showing Ads …</string>

    <string name="bluetoothAlreadyOnString">Bluetooth has been on already.</string>
    <string name="bluetoothCannotBeTurnedOnString">Bluetooth cannot be turned on.</string>
    <string name="bluetoothNotSupportedString">Bluetooth is not supported.</string>
    <string name="wifiDirectNotSupportedString">Wifi-Direct is not supported.</string>
    <string name="deviceNameCannotBeEmptyString">Device name cannot be empty.</string>
    <string name="playerNameCannotBeEmptyString">Player name cannot be empty.</string>
    <string name="bluetoothVisibilityForPeriodString">Bluetooth will is visible for</string>
    <string name="bluetoothVisibilityAlways">Bluetooth is always visible</string>
    <string name="bluetoothCannotBeVisibleString">Bluetooth visibility cannot be enabled.</string>
    <string name="bluetoothVisibilityIsDisabledString">Bluetooth visibility was disabled.</string>
    <string name="bluetoothRefusedByUserString">Refused by user.</string>
    <string name="scanBluetoothStartedString">Scanning Bluetooth devices started.</string>
    <string name="scanBluetoothFinishedString">Scanning Bluetooth devices finished.</string>
    <string name="stopScanningBluetoothString">Stop scanning Bluetooth devices.</string>
    <string name="deviceNameString">Device name:</string>
    <string name="playerNameString">Player name:</string>
    <string name="waitingForConnectionString">Waiting for connection.</string>
    <string name="waitingStoppedCancelledString">Waiting for connection stopped or canceled.</string>
    <string name="cannotCreateServerSocketString">Cannot create server socket.</string>
    <string name="serverAcceptedConnectionString">Server accepted connection.</string>
    <string name="cannotCreateClientSocketString">Cannot create client socket.</string>
    <string name="startedConnectingToHostString">Started to connect to host.</string>
    <string name="connectToHostSucceededString">Succeeded to connect to Host.</string>
    <string name="connectToHostFailedString">Failed to connect to Host.</string>
    <string name="cancelledConnectingToHostString">Cancelled connecting to Host.</string>
    <string name="explainProblemForBluetoothString">If you have any problem with connecting, please reboot Bluetooth.</string>
    <string name="explainProblemForWifiString">If you have any problem with connecting, please reconnect to Wi-Fi.</string>
    <string name="explainProblemForInternetString">If you have any problem with connecting, please reconnect to internet.</string>
    <string name="createBluetoothGameString">Create Bluetooth Game</string>
    <string name="joinBluetoothGameString">Join Bluetooth Game</string>
    <string name="clientLeftGameString">Client left game.</string>
    <string name="hostLeftGameString">Host left game.</string>
    <string name="hostStartGameString">Host started game.</string>
    <string name="discoveryTimeHasReachedString">Discovery time has reached.</string>
    <string name="discoveryWasDismissedString">Discovery was dismissed.</string>
    <string name="foundDeviceString">Found device</string>
    <string name="hasBeenReadString">has been read</string>
    <string name="noOppositePlayerString">No opposite player</string>
    <string name="oppositePlayerLeftGameString">Opposite player left game.</string>
    <string name="gameCreatorString">Creator</string>
    <string name="gameJoinerString">Joiner</string>
    <string name="discoverPlayerString">Finding Players</string>
    <string name="connectingPlayerString">Connecting Player</string>

    <string name="wifiDirectNotEnabledString">Wi-Fi Direct is not enabled.</string>
    <string name="wifiDirectVisibilityActiveString">Wi-Fi Direct peer discovery is active.</string>
    <string name="wifiDirectCannotStartString">Wi-Fi Direct peer discovery cannot be started.</string>
    <string name="wifiDirectScanStartedString">Wi-Fi Direct peer discovery started.</string>
    <string name="wifiDirectScanFinishedString">Wi-Fi Direct peer discovery finished.</string>
    <string name="createWifiDirectGameString">Create Wi-Fi Direct Game</string>
    <string name="joinWifiDirectGameString">Join Wi-Fi Direct Game</string>

    <string name="companyNameString">Smile Information Inc.</string>
    <string name="companyContactEmailString">leechao1959@gmail.com</string>

    <string name="google_AdMobAppID">ca-app-pub-8354869049759576~9932277958</string>

</resources>
