<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="0dp"
    android:layout_marginBottom="5dp"
    android:fitsSystemWindows="true"
    android:weightSum="3">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <TextView
            android:id="@+id/gameStatusTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_alignParentStart="true"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            android:text="@string/gameStatusString">
        </TextView>
        <ImageView
            android:id="@+id/soundOnOffImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/emptyString"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"
            android:layout_toEndOf="@+id/gameStatusTitle"
            android:layout_marginStart="10dp">
        </ImageView>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/scoreLayoutTop"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2">
        <LinearLayout
            android:id="@+id/scoreLayoutLeftTop"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights">
            <RelativeLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">
                <TextView
                    android:id="@+id/highestScoreTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/lightDarkGreen"
                    android:text="@string/highestString">
                </TextView>
                <TextView
                    android:id="@+id/highestScoreText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/highestScoreTitle"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/highestScoreTitle"
                    android:textColor="@color/darkRed">
                </TextView>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/scoreLayoutRightTop"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <RelativeLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">
                <TextView
                    android:id="@+id/timerTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/lightDarkGreen"
                    android:text="@string/timerString">
                </TextView>
                <TextView
                    android:id="@+id/timerText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/timerTitle"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/timerTitle"
                    android:textColor="@color/blue">
                </TextView>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/scoreLayoutBottom"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:weightSum="2">
        <LinearLayout
            android:id="@+id/scoreLayoutLeftBottom"
            android:orientation="horizontal"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            tools:ignore="NestedWeights">
            <RelativeLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">
                <TextView
                    android:id="@+id/scoreTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/lightDarkGreen"
                    android:text="@string/scoreString">
                </TextView>
                <TextView
                    android:id="@+id/scoreText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/scoreTitle"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/scoreTitle"
                    android:textColor="@color/blue">
                </TextView>
            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/scoreLayoutRightBottom"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <RelativeLayout
                android:gravity="center_vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:ignore="UselessParent">
                <TextView
                    android:id="@+id/num_hit_Title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:textColor="@color/lightDarkGreen"
                    android:text="@string/numHitString">
                </TextView>
                <TextView
                    android:id="@+id/num_hit_Text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toEndOf="@+id/num_hit_Title"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/num_hit_Title"
                    android:textColor="@color/blue">
                </TextView>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>