<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow2"
    tools:context=".TwoPlayerActivity">

    <TextView
        android:id="@+id/twoPlayerSettingTitle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold"
        android:text="@string/twoPlayerString"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toTopOf="parent" >
    </TextView>

    <LinearLayout
        android:id="@+id/radioButtonLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:divider="@drawable/layout_horizontal_divider"
        android:showDividers="beginning|end"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintTop_toBottomOf="@id/twoPlayerSettingTitle"
        android:layout_weight="3">
        <RadioGroup
            android:id="@+id/networkMediaTypeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp">
            <RadioButton
                android:id="@+id/bluetoothRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:textColor="@color/blue"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:text="@string/bluetoothString">
            </RadioButton>
            <RadioButton
                android:id="@+id/lanRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:textColor="@color/blue"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:text="@string/wifiString"
                android:enabled="false" >
            </RadioButton>
            <RadioButton
                android:id="@+id/internetRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:buttonTint="@color/blue"
                android:textColor="@color/blue"
                android:textAllCaps="false"
                android:textStyle="normal"
                android:text="@string/internetString"
                android:enabled="false" >
            </RadioButton>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/playerNameLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/edittext_bar"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@id/radioButtonLayout" >
        <TextView
            android:id="@+id/deviceNameStringTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textStyle="normal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="0dp"
            android:gravity="left|center_vertical"
            android:text="@string/deviceNameString">
        </TextView>
        <TextView
            android:id="@+id/playerNameTextView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textAllCaps="false"
            android:textColor="@android:color/black"
            android:textStyle="normal"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="0dp"
            android:gravity="left|center_vertical">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/dummyLayout1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintTop_toBottomOf="@id/playerNameLayout">
    </LinearLayout>

    <LinearLayout
        android:id="@+id/createJoinButtonLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintTop_toBottomOf="@id/dummyLayout1"
        android:weightSum="2">
        <com.smile.groundhoghunter.Model.SmileImageButton
            android:id="@+id/createGameButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:layout_weight="1" >
        </com.smile.groundhoghunter.Model.SmileImageButton>
        <com.smile.groundhoghunter.Model.SmileImageButton
            android:id="@+id/joinGameButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:layout_weight="1" >
        </com.smile.groundhoghunter.Model.SmileImageButton>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/playerListViewLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/createJoinButtonLayout"
        app:layout_constraintBottom_toTopOf="@id/cancelOkButtonLayout" >
        <ListView
            android:id="@+id/playerListView"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/listview_border"
            android:scrollbars="vertical|horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginBottom="30dp" >
        </ListView>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cancelOkButtonLayout"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:weightSum="2">
        <com.smile.groundhoghunter.Model.SmileImageButton
            android:id="@+id/cancelTwoPlayerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAllCaps="false"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:layout_weight="1" >
        </com.smile.groundhoghunter.Model.SmileImageButton>
        <com.smile.groundhoghunter.Model.SmileImageButton
            android:id="@+id/confirmTwoPlayerButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textAllCaps="false"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
            android:scaleType="fitXY"
            android:background="@android:color/transparent"
            android:layout_weight="1" >
        </com.smile.groundhoghunter.Model.SmileImageButton>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>